fix: spacing

--- a/services/web-app/components/page-description/page-description.module.scss
+++ b/services/web-app/components/page-description/page-description.module.scss
@@ -10,7 +10,7 @@
 @use '@carbon/react/scss/theme' as theme;
 
 .page-description {
-  margin-top: spacing.$spacing-06;
+  margin-top: spacing.$spacing-11;
   color: theme.$text-primary;
 }
 
